...
    }
    
    private func showRightAnswerAlert (button: UIButton) {
        haveWon = true
        button.backgroundColor = .green
        rightAnswers += 1
        let alertController = UIAlertController(title: "Correct 🥳", message: "Good job!", preferredStyle: UIAlertController.Style.alert)
        alertController.addAction(UIAlertAction(title: "Next question", style: UIAlertAction.Style.default, handler: { (_) in
            self.goToNextScreen()
        }))
        present(alertController, animated: true, completion: nil)
    }
    
...
