...
                                        <connections>
                                            <action selector="sliderHandler:" destination="8Tb-W8-h0F" eventType="valueChanged" id="a3W-zV-Ddk"/>
                                        </connections>
                                    </slider>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9m-OX-NXF">
                                        <rect key="frame" x="0.0" y="272" width="414" height="34"/>
                                        <state key="normal" title="Start"/>
                                        <connections>
                                            <action selector="startButtonHandler:" destination="8Tb-W8-h0F" eventType="touchUpInside" id="kFr-8U-PK5"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lkx-Mu-Uyr">
                                        <rect key="frame" x="0.0" y="306" width="414" height="34"/>
...
